# cpp-cmake-template

./: CMakeLists.txt  Makefile  Makefile.proj  README.md
.github/workflows/: ci.yml
ProjectName/: CMakeLists.txt
ProjectName/include/: header.h
